--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=base64:XiFlYt/TcwZ9KD3DYTsmS00p4cpUyyiZ3MVSC7EenNE=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_TIMEZONE=Asia/Jakarta
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
